fix text overflow

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -2,8 +2,14 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  background-color: lightgrey;
 
   &__container {
     border: 1px solid lightgray;
   }
+}
+
+.iv {
+  width: 60vw;
+  height: 80vh;
 }
