--- a/src/components/ClassMemberItem/ClassMemberItem.module.scss
+++ b/src/components/ClassMemberItem/ClassMemberItem.module.scss
@@ -6,26 +6,29 @@
 
 
 
-    & .profile {
+    & .wrapper {
+        min-width: 0;
+    }
+
+    & .avatar {
+        flex-grow: 0;
+        flex-shrink: 0;
+    }
+
+    & .text {
+        text-wrap: nowrap;
+        text-overflow: ellipsis;
         overflow: hidden;
-        justify-self: flex-start;
 
-
-        & .avatar {
-            flex-grow: 0;
-            flex-shrink: 0;
-        }
-
-        & .name {
+        &.name {
             color: black;
-            text-wrap: nowrap;
         }
 
-
-        & .role {
+        &.role {
             color: gray
         }
     }
+
 
     & .btn {
         & .icon {
